# parameter-sweep

./: README.md  codecov.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
docs/: conf.py  index.rst
docs/getting_started/: index.rst  installation.rst  parallel_manager.rst  parameter_sweep.rst
docs/how_to_guides/: how_to_run_differential_parameter_sweep.rst  how_to_use_parameter_sweep.rst  how_to_use_parameter_sweep_monte_carlo.rst
docs/technical_reference/tools/: parallel_manager.rst  parameter_sweep.rst
src/parameter_sweep/: __init__.py  _compat.py  conftest.py  differential.py  functions.py  model_manager.py  parallel_utils.py  parameter_sweep.py  reader.py  sampling_types.py  writer.py
src/parameter_sweep/loop_tool/: __init__.py  data_merging_tool.py  loop_tool.py
src/parameter_sweep/loop_tool/tests/: ro_setup.py  test_data_merging_tool.py  test_expected_diff_directory.yaml  test_expected_option_directory.yaml  test_expected_sweep_directory.yaml  test_loop_tool.py
src/parameter_sweep/parallel/: concurrent_futures_parallel_manager.py  mpi_parallel_manager.py  multiprocessing_parallel_manager.py  parallel_manager.py  parallel_manager_factory.py  ray_io_parallel_manager.py  results.py  single_process_parallel_manager.py
src/parameter_sweep/parallel/MPI/: __init__.py
src/parameter_sweep/parallel/MPI/tests/: test_dummy_mpi.py
src/parameter_sweep/parallel/tests/: test_concurrent_futures_parallel_manager.py  test_multiprocessing_parallel_manager.py  test_parallel_manager.py  test_ray_io_parallel_manager.py
src/parameter_sweep/tests/: test_deprecations.py  test_differential_parameter_sweep.py  test_parameter_sweep.py  test_parameter_sweep_reader.py  test_parameter_sweep_writer.py  test_recursive_parameter_sweep.py
tutorials/: parameter_sweep_demo.ipynb
tutorials/assets_parameter_sweep_demo/: parameter_sweep_demo_script.py
