[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[project]
name = "parameter-sweep" 
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pyomo>=6.7.3",  # see watertap-org/parameter-sweep#10
    "numpy",
    "h5py",
    "pyyaml",
    # both idaes-pse and watertap should be removed from core dependencies ASAP
    "idaes-pse",  # idaes.core.solvers.get_solver(), idaes.core.surrogate.pysmo.sampling
]
[project.optional-dependencies]
ray = [
    "ray",
]
mpi = [
    "mpi4py",
]
testing = [
    "pytest >= 8",
    "idaes-pse",  # for IDAES solvers
    "watertap",   # loop_tool tests
    "requests",  # for src/parameter_sweep/tests/test_parameter_sweep.py
]
[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/en/v8.1.0/extending/
version_scheme = "only-version"
local_scheme = "node-and-date"